jarvis/src/main/java/com/thoughtworks/jj/jarvis/antlr/JarvisParser.java
// Generated from /Users/aarni/Documents/tw/journeyjournal/jarvis/src/main/antlr/Jarvis.g4 by ANTLR 4.2.2
package com.thoughtworks.jj.jarvis.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JarvisParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__7=1, T__6=2, T__5=3, T__4=4, T__3=5, T__2=6, T__1=7, T__0=8, CAPABILITY_DESCRIPTOR=9, 
		GOALS_DESCRIPTOR=10, HIGHLIGH_DESCRIPTOR=11, TOPIC_DESCRIPTOR=12, GREAT_FEEDBACK_DESCRIPTOR=13, 
		CONSTRUCTIVE_FEEDBACK_DESCRIPTOR=14, TASKS_DESCRIPTOR=15, FROM_DESCRIPTOR=16, 
		CONNECTOR=17, DIGIT=18, IDENTIFIER=19, NEW_LINE=20, WS=21;
	public static final String[] tokenNames = {
		"<INVALID>", "' '", "'!'", "'('", "')'", "':'", "','", "'-'", "'.'", "CAPABILITY_DESCRIPTOR", 
		"GOALS_DESCRIPTOR", "HIGHLIGH_DESCRIPTOR", "TOPIC_DESCRIPTOR", "'The great feedback that I got was:'", 
		"'The constructive feedback that I got was:'", "TASKS_DESCRIPTOR", "FROM_DESCRIPTOR", 
		"CONNECTOR", "DIGIT", "IDENTIFIER", "NEW_LINE", "WS"
	};
	public static final int
		RULE_phrases = 0, RULE_phrase = 1, RULE_capabilityPhrase = 2, RULE_goalsStartPhrase = 3, 
		RULE_highlightPhrase = 4, RULE_howToPhrase = 5, RULE_goalPhrase = 6, RULE_topicPhrase = 7, 
		RULE_feedbackPhrase = 8, RULE_greatFeedbackPhrase = 9, RULE_constructiveFeedbackPhase = 10, 
		RULE_fromPhrase = 11, RULE_itemPhrase = 12, RULE_missionDescription = 13;
	public static final String[] ruleNames = {
		"phrases", "phrase", "capabilityPhrase", "goalsStartPhrase", "highlightPhrase", 
		"howToPhrase", "goalPhrase", "topicPhrase", "feedbackPhrase", "greatFeedbackPhrase", 
		"constructiveFeedbackPhase", "fromPhrase", "itemPhrase", "missionDescription"
	};

	@Override
	public String getGrammarFileName() { return "Jarvis.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JarvisParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PhrasesContext extends ParserRuleContext {
		public List<PhraseContext> phrase() {
			return getRuleContexts(PhraseContext.class);
		}
		public TerminalNode NEW_LINE(int i) {
			return getToken(JarvisParser.NEW_LINE, i);
		}
		public PhraseContext phrase(int i) {
			return getRuleContext(PhraseContext.class,i);
		}
		public List<TerminalNode> NEW_LINE() { return getTokens(JarvisParser.NEW_LINE); }
		public PhrasesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_phrases; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JarvisVisitor ) return ((JarvisVisitor<? extends T>)visitor).visitPhrases(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PhrasesContext phrases() throws RecognitionException {
		PhrasesContext _localctx = new PhrasesContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_phrases);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(30);
				switch (_input.LA(1)) {
				case 1:
				case 7:
				case CAPABILITY_DESCRIPTOR:
				case GOALS_DESCRIPTOR:
				case HIGHLIGH_DESCRIPTOR:
				case TOPIC_DESCRIPTOR:
				case GREAT_FEEDBACK_DESCRIPTOR:
				case CONSTRUCTIVE_FEEDBACK_DESCRIPTOR:
				case TASKS_DESCRIPTOR:
				case FROM_DESCRIPTOR:
				case DIGIT:
					{
					setState(28); phrase();
					}
					break;
				case NEW_LINE:
					{
					setState(29); match(NEW_LINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(32); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 7) | (1L << CAPABILITY_DESCRIPTOR) | (1L << GOALS_DESCRIPTOR) | (1L << HIGHLIGH_DESCRIPTOR) | (1L << TOPIC_DESCRIPTOR) | (1L << GREAT_FEEDBACK_DESCRIPTOR) | (1L << CONSTRUCTIVE_FEEDBACK_DESCRIPTOR) | (1L << TASKS_DESCRIPTOR) | (1L << FROM_DESCRIPTOR) | (1L << DIGIT) | (1L << NEW_LINE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PhraseContext extends ParserRuleContext {
		public GoalPhraseContext goalPhrase() {
			return getRuleContext(GoalPhraseContext.class,0);
		}
		public CapabilityPhraseContext capabilityPhrase() {
			return getRuleContext(CapabilityPhraseContext.class,0);
		}
		public ItemPhraseContext itemPhrase() {
			return getRuleContext(ItemPhraseContext.class,0);
		}
		public HighlightPhraseContext highlightPhrase() {
			return getRuleContext(HighlightPhraseContext.class,0);
		}
		public TopicPhraseContext topicPhrase() {
			return getRuleContext(TopicPhraseContext.class,0);
		}
		public FeedbackPhraseContext feedbackPhrase() {
			return getRuleContext(FeedbackPhraseContext.class,0);
		}
		public HowToPhraseContext howToPhrase() {
			return getRuleContext(HowToPhraseContext.class,0);
		}
		public TerminalNode NEW_LINE() { return getToken(JarvisParser.NEW_LINE, 0); }
		public GoalsStartPhraseContext goalsStartPhrase() {
			return getRuleContext(GoalsStartPhraseContext.class,0);
		}
		public FromPhraseContext fromPhrase() {
			return getRuleContext(FromPhraseContext.class,0);
		}
		public PhraseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_phrase; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JarvisVisitor ) return ((JarvisVisitor<? extends T>)visitor).visitPhrase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PhraseContext phrase() throws RecognitionException {
		PhraseContext _localctx = new PhraseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_phrase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(34); capabilityPhrase();
				}
				break;

			case 2:
				{
				setState(35); goalsStartPhrase();
				}
				break;

			case 3:
				{
				setState(36); goalPhrase();
				}
				break;

			case 4:
				{
				setState(37); highlightPhrase();
				}
				break;

			case 5:
				{
				setState(38); topicPhrase();
				}
				break;

			case 6:
				{
				setState(39); feedbackPhrase();
				}
				break;

			case 7:
				{
				setState(40); fromPhrase();
				}
				break;

			case 8:
				{
				setState(41); howToPhrase();
				}
				break;

			case 9:
				{
				setState(42); itemPhrase();
				}
				break;
			}
			setState(46);
			_la = _input.LA(1);
			if (_la==8) {
				{
				setState(45); match(8);
				}
			}

			setState(48); match(NEW_LINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CapabilityPhraseContext extends ParserRuleContext {
		public MissionDescriptionContext missionDescription() {
			return getRuleContext(MissionDescriptionContext.class,0);
		}
		public TerminalNode CAPABILITY_DESCRIPTOR() { return getToken(JarvisParser.CAPABILITY_DESCRIPTOR, 0); }
		public TerminalNode IDENTIFIER() { return getToken(JarvisParser.IDENTIFIER, 0); }
		public CapabilityPhraseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_capabilityPhrase; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JarvisVisitor ) return ((JarvisVisitor<? extends T>)visitor).visitCapabilityPhrase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CapabilityPhraseContext capabilityPhrase() throws RecognitionException {
		CapabilityPhraseContext _localctx = new CapabilityPhraseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_capabilityPhrase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); match(CAPABILITY_DESCRIPTOR);
			{
			setState(51); match(IDENTIFIER);
			}
			setState(52); missionDescription();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GoalsStartPhraseContext extends ParserRuleContext {
		public TerminalNode GOALS_DESCRIPTOR() { return getToken(JarvisParser.GOALS_DESCRIPTOR, 0); }
		public GoalsStartPhraseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goalsStartPhrase; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JarvisVisitor ) return ((JarvisVisitor<? extends T>)visitor).visitGoalsStartPhrase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GoalsStartPhraseContext goalsStartPhrase() throws RecognitionException {
		GoalsStartPhraseContext _localctx = new GoalsStartPhraseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_goalsStartPhrase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54); match(GOALS_DESCRIPTOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HighlightPhraseContext extends ParserRuleContext {
		public TerminalNode DIGIT(int i) {
			return getToken(JarvisParser.DIGIT, i);
		}
		public TerminalNode IDENTIFIER(int i) {
			return getToken(JarvisParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(JarvisParser.DIGIT); }
		public TerminalNode HIGHLIGH_DESCRIPTOR() { return getToken(JarvisParser.HIGHLIGH_DESCRIPTOR, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(JarvisParser.IDENTIFIER); }
		public HighlightPhraseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_highlightPhrase; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JarvisVisitor ) return ((JarvisVisitor<? extends T>)visitor).visitHighlightPhrase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HighlightPhraseContext highlightPhrase() throws RecognitionException {
		HighlightPhraseContext _localctx = new HighlightPhraseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_highlightPhrase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56); match(HIGHLIGH_DESCRIPTOR);
			setState(58); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(57);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << DIGIT) | (1L << IDENTIFIER))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				}
				setState(60); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << DIGIT) | (1L << IDENTIFIER))) != 0) );
			setState(62); match(5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HowToPhraseContext extends ParserRuleContext {
		public TerminalNode TASKS_DESCRIPTOR() { return getToken(JarvisParser.TASKS_DESCRIPTOR, 0); }
		public HowToPhraseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_howToPhrase; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JarvisVisitor ) return ((JarvisVisitor<? extends T>)visitor).visitHowToPhrase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HowToPhraseContext howToPhrase() throws RecognitionException {
		HowToPhraseContext _localctx = new HowToPhraseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_howToPhrase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64); match(TASKS_DESCRIPTOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GoalPhraseContext extends ParserRuleContext {
		public TerminalNode DIGIT(int i) {
			return getToken(JarvisParser.DIGIT, i);
		}
		public TerminalNode IDENTIFIER(int i) {
			return getToken(JarvisParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(JarvisParser.DIGIT); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(JarvisParser.IDENTIFIER); }
		public GoalPhraseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goalPhrase; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JarvisVisitor ) return ((JarvisVisitor<? extends T>)visitor).visitGoalPhrase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GoalPhraseContext goalPhrase() throws RecognitionException {
		GoalPhraseContext _localctx = new GoalPhraseContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_goalPhrase);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==1) {
				{
				{
				setState(66); match(1);
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(72); match(DIGIT);
			setState(73); match(8);
			setState(75); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(74); match(1);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(77); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			} while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER );
			setState(80); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(79);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << DIGIT) | (1L << IDENTIFIER))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				}
				setState(82); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << DIGIT) | (1L << IDENTIFIER))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopicPhraseContext extends ParserRuleContext {
		public TerminalNode DIGIT(int i) {
			return getToken(JarvisParser.DIGIT, i);
		}
		public TerminalNode TOPIC_DESCRIPTOR() { return getToken(JarvisParser.TOPIC_DESCRIPTOR, 0); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(JarvisParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(JarvisParser.DIGIT); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(JarvisParser.IDENTIFIER); }
		public TopicPhraseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topicPhrase; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JarvisVisitor ) return ((JarvisVisitor<? extends T>)visitor).visitTopicPhrase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopicPhraseContext topicPhrase() throws RecognitionException {
		TopicPhraseContext _localctx = new TopicPhraseContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_topicPhrase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84); match(TOPIC_DESCRIPTOR);
			setState(86); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(85);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << DIGIT) | (1L << IDENTIFIER))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				}
				setState(88); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << DIGIT) | (1L << IDENTIFIER))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FeedbackPhraseContext extends ParserRuleContext {
		public ConstructiveFeedbackPhaseContext constructiveFeedbackPhase() {
			return getRuleContext(ConstructiveFeedbackPhaseContext.class,0);
		}
		public GreatFeedbackPhraseContext greatFeedbackPhrase() {
			return getRuleContext(GreatFeedbackPhraseContext.class,0);
		}
		public FeedbackPhraseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feedbackPhrase; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JarvisVisitor ) return ((JarvisVisitor<? extends T>)visitor).visitFeedbackPhrase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FeedbackPhraseContext feedbackPhrase() throws RecognitionException {
		FeedbackPhraseContext _localctx = new FeedbackPhraseContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_feedbackPhrase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			switch (_input.LA(1)) {
			case GREAT_FEEDBACK_DESCRIPTOR:
				{
				setState(90); greatFeedbackPhrase();
				}
				break;
			case CONSTRUCTIVE_FEEDBACK_DESCRIPTOR:
				{
				setState(91); constructiveFeedbackPhase();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GreatFeedbackPhraseContext extends ParserRuleContext {
		public TerminalNode GREAT_FEEDBACK_DESCRIPTOR() { return getToken(JarvisParser.GREAT_FEEDBACK_DESCRIPTOR, 0); }
		public GreatFeedbackPhraseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_greatFeedbackPhrase; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JarvisVisitor ) return ((JarvisVisitor<? extends T>)visitor).visitGreatFeedbackPhrase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GreatFeedbackPhraseContext greatFeedbackPhrase() throws RecognitionException {
		GreatFeedbackPhraseContext _localctx = new GreatFeedbackPhraseContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_greatFeedbackPhrase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94); match(GREAT_FEEDBACK_DESCRIPTOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstructiveFeedbackPhaseContext extends ParserRuleContext {
		public TerminalNode CONSTRUCTIVE_FEEDBACK_DESCRIPTOR() { return getToken(JarvisParser.CONSTRUCTIVE_FEEDBACK_DESCRIPTOR, 0); }
		public ConstructiveFeedbackPhaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructiveFeedbackPhase; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JarvisVisitor ) return ((JarvisVisitor<? extends T>)visitor).visitConstructiveFeedbackPhase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstructiveFeedbackPhaseContext constructiveFeedbackPhase() throws RecognitionException {
		ConstructiveFeedbackPhaseContext _localctx = new ConstructiveFeedbackPhaseContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_constructiveFeedbackPhase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96); match(CONSTRUCTIVE_FEEDBACK_DESCRIPTOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FromPhraseContext extends ParserRuleContext {
		public TerminalNode DIGIT(int i) {
			return getToken(JarvisParser.DIGIT, i);
		}
		public TerminalNode IDENTIFIER(int i) {
			return getToken(JarvisParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(JarvisParser.DIGIT); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(JarvisParser.IDENTIFIER); }
		public TerminalNode FROM_DESCRIPTOR() { return getToken(JarvisParser.FROM_DESCRIPTOR, 0); }
		public FromPhraseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fromPhrase; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JarvisVisitor ) return ((JarvisVisitor<? extends T>)visitor).visitFromPhrase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FromPhraseContext fromPhrase() throws RecognitionException {
		FromPhraseContext _localctx = new FromPhraseContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_fromPhrase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); match(FROM_DESCRIPTOR);
			setState(100); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(99);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << DIGIT) | (1L << IDENTIFIER))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				}
				setState(102); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << DIGIT) | (1L << IDENTIFIER))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ItemPhraseContext extends ParserRuleContext {
		public TerminalNode DIGIT(int i) {
			return getToken(JarvisParser.DIGIT, i);
		}
		public TerminalNode IDENTIFIER(int i) {
			return getToken(JarvisParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(JarvisParser.DIGIT); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(JarvisParser.IDENTIFIER); }
		public ItemPhraseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_itemPhrase; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JarvisVisitor ) return ((JarvisVisitor<? extends T>)visitor).visitItemPhrase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ItemPhraseContext itemPhrase() throws RecognitionException {
		ItemPhraseContext _localctx = new ItemPhraseContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_itemPhrase);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==1) {
				{
				{
				setState(104); match(1);
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110); match(7);
			setState(112); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(111);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 2) | (1L << 3) | (1L << 4) | (1L << 5) | (1L << 6) | (1L << 7) | (1L << 8) | (1L << DIGIT) | (1L << IDENTIFIER))) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(114); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			} while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MissionDescriptionContext extends ParserRuleContext {
		public TerminalNode CONNECTOR() { return getToken(JarvisParser.CONNECTOR, 0); }
		public TerminalNode DIGIT(int i) {
			return getToken(JarvisParser.DIGIT, i);
		}
		public TerminalNode IDENTIFIER(int i) {
			return getToken(JarvisParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(JarvisParser.DIGIT); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(JarvisParser.IDENTIFIER); }
		public MissionDescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_missionDescription; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JarvisVisitor ) return ((JarvisVisitor<? extends T>)visitor).visitMissionDescription(this);
			else return visitor.visitChildren(this);
		}
	}
